- Added location logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="retrofit_activity_title">ViewModel + LiveData + Retrofit Demo</string>
     <string name="mvp_activity_title">MVP Demo</string>
     <string name="mvc_activity_title">MVC Demo</string>
+    <string name="location_activity_title">Location Demo</string>
 
     <string name="button_room">Android Room</string>
     <string name="button_mvp">MVP</string>
@@ -36,6 +37,7 @@
     <string name="button_motion">Motion Layout</string>
     <string name="button_retrofit">ViewModel + LiveData + Retrofit</string>
     <string name="button_retrofit2">ViewModel + LiveData + Retrofit + Sealed Class</string>
+    <string name="button_location">Location</string>
 
     <string name="next">Next Screen</string>
     <string name="image">Random city image</string>
