--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="mvc_activity_title">MVC Demo</string>
     <string name="location_activity_title">Location Demo</string>
     <string name="app_updates_activity_title">In AppUpdates Demo</string>
+    <string name="navigation_activity_title">Navigation Demo</string>
 
     <string name="button_room">Android Room</string>
     <string name="button_mvp">MVP</string>
@@ -40,6 +41,7 @@
     <string name="button_retrofit2">ViewModel + LiveData + Retrofit + Sealed Class</string>
     <string name="button_location">Location</string>
     <string name="button_app_updates">In App Updates</string>
+    <string name="button_navigation">Navigation</string>
 
     <string name="next">Next Screen</string>
     <string name="image">Random city image</string>
@@ -61,5 +63,8 @@
 \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
 \n\nI\'ll be happy to teach you how to make your own aquarium.
 \nYou should ask someone else about fishing, though.\n\n</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
