- Added firebase remote config demo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="navigation_activity_title">Navigation Demo</string>
     <string name="rxjava_activity_title">RxJava Demo</string>
     <string name="auto_size_textview_activity_title">AutoSize TextView Demo</string>
+    <string name="firebase_activity_title">FireBase Remote Config Demo</string>
 
     <string name="button_download_img">Download Image</string>
     <string name="button_download_song">Download Song</string>
@@ -62,8 +63,9 @@
     <string name="button_rxjava_demo">RxJava Demo</string>
     <string name="button_network">Network Libs</string>
     <string name="button_other">Other things</string>
-    <string name="button_shimmer_demo">Shimmer Effect</string>
-    <string name="button_auto_textview_size_demo">TextView AutoSize</string>
+    <string name="button_shimmer">Shimmer Effect</string>
+    <string name="button_auto_textview_size">TextView AutoSize</string>
+    <string name="button_firebase">Firebase Remote Config</string>
 
     <string name="button_get_post">Get Posts</string>
     <string name="button_get_movies">Get Movies</string>
