- Added new animation library

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="main_activity_title">Kotlin Coroutines + Android Arch Components Demos</string>
     <string name="enter_word_title">Enter Word</string>
 
+    <string name="bounce_animation_activity_title">Bounce Animation Demo</string>
     <string name="my_test_activity_title">My Test Demo</string>
     <string name="lottie_activity_title">Lottie Animation Demo</string>
     <string name="shimmer_effect_activity_title">Shimmer Effect Demo</string>
@@ -72,6 +73,7 @@
     <string name="button_sql_delight">SQLDelight</string>
     <string name="button_lottie_animation">Lotti Animation</string>
     <string name="button_my_test">My Test</string>
+    <string name="button_bounce_anim">Bounce Animation</string>
 
     <string name="button_mvvm_data_binding">MVVM + Data Binding</string>
 
